# Caffeine

./: .gitignore  CMakeLists.txt
lib/: CMakeLists.txt
lib/Winterval/: CMakeLists.txt
scripts/: run_tests  update-deps
src/: AffineForm.cpp  AffineForm.hpp  CMakeLists.txt  NoiseSymbol.cpp  WaffineForm.cpp  WaffineForm.hpp  main.cpp  noise_symbol.h
src/test/: CMakeLists.txt  test_affine_binop.cpp  test_affine_comparison.cpp  test_affine_misc.cpp  test_affine_scalar.cpp
test/: CMakeLists.txt  test_affine_binop.cpp  test_affine_equals.cpp  test_affine_scalar.cpp  test_affine_serialization.cpp  test_affine_unop.cpp  test_waffine.cpp  test_waffine_binop.cpp  test_waffine_equals.cpp  test_waffine_scalar.cpp  test_waffine_serialization.cpp  test_waffine_unop.cpp
